<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bendera"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/logo_tebak_gambar" />

        <LinearLayout
            android:id="@+id/linePilGan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bendera"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/pilihanganda" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kuis_pilihan_ganda"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineEssay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bendera"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/gbr_essay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kuis_essay"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineDaftarMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineEssay"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/tampilan_makanan_awal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/daftar_makanan"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineKuisSambungKata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineEssay"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/sambung_kata" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kuis_sambung_kata"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>
